--- a/GIVE/package.json
+++ b/GIVE/package.json
@@ -9,6 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/material-bottom-tabs": "^6.2.15",
+    "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
@@ -17,8 +21,13 @@
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-pager-view": "6.1.2",
+    "react-native-paper": "^5.7.2",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0"
+    "react-native-screens": "~3.20.0",
+    "react-native-tab-view": "^3.5.1",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
