--- a/backend/package.json
+++ b/backend/package.json
@@ -4,16 +4,17 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start":"nodemon app.js",
+    "start": "nodemon app.js",
     "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "expo": "^48.0.17",
     "express": "^4.18.2",
-    "mongoose": "^7.1.2",
+    "mongoose": "^7.2.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22"
   }
