--- a/GIVE/package.json
+++ b/GIVE/package.json
@@ -20,7 +20,9 @@
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "expo": "~48.0.15",
+    "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
@@ -34,8 +36,7 @@
     "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.10",
-    "expo-image-picker": "~14.1.1"
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
