--- a/GIVE/package.json
+++ b/GIVE/package.json
@@ -9,6 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.7.1",
+    "@emotion/native": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "@expo/webpack-config": "^18.0.1",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
@@ -22,10 +25,12 @@
     "expo": "~48.0.15",
     "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
+    "framer-motion": "^10.12.16",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-calendars": "^1.1298.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-pager-view": "6.1.2",
