--- a/GIVE/app.json
+++ b/GIVE/app.json
@@ -21,10 +21,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.giveapp.GIVE"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "687e9df2-be45-4d0f-9ac9-7b533974189e"
+      }
     }
   }
 }
