--- a/GIVE/package.json
+++ b/GIVE/package.json
@@ -29,12 +29,11 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-calendars": "^1.1298.0",
     "react-native": "0.71.3",
     "react-native-calendars": "^1.1299.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-gifted-chat": "^2.4.0",
     "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.7.2",
     "react-native-reanimated": "~2.14.4",
