--- a/GIVE/package.json
+++ b/GIVE/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "expo": "~48.0.15",
     "expo-image-picker": "~14.1.1",
+    "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
     "framer-motion": "^10.12.16",
     "native-base": "^3.4.28",
