--- a/GIVE/package.json
+++ b/GIVE/package.json
@@ -13,6 +13,7 @@
     "@emotion/native": "^11.11.0",
     "@emotion/react": "^11.11.1",
     "@expo/webpack-config": "^18.0.1",
+    "@react-native-community/google-signin": "^5.0.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
@@ -26,19 +27,24 @@
     "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "framer-motion": "^10.12.16",
+    "moment": "^2.29.4",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-action-button": "^2.8.5",
     "react-native-calendars": "^1.1299.0",
     "react-native-elements": "^3.4.3",
+    "react-native-fbsdk": "^3.0.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-gifted-chat": "^2.4.0",
+    "react-native-image-crop-picker": "^0.40.0",
     "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.7.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-svg": "13.4.0",
     "react-native-swiper": "^1.6.0",
     "react-native-swiper-flatlist": "^3.2.3",
